--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <style>
       body {
-        background-image: url("cek-tinggi-anak/bg1.jpg");
+        background-image: url("assets/bg1.jpg");
         background-size: cover;
         background-repeat: no-repeat;
       }
@@ -33,7 +33,7 @@
 
       @media screen and (max-width: 768px) {
         body {
-          background-image: url("cek-tinggi-anak/bg2.jpg");
+          background-image: url("assets/bg2.jpg");
         }
       }
     </style>
